# openapi-cli4ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  openapi-cli4ai  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml
examples/: profiles.toml.example
src/openapi_cli4ai/: __init__.py  __main__.py  cli.py
tests/: conftest.py  test_auth.py  test_auth_flow_security.py  test_auth_flows.py  test_caching.py  test_cli_commands.py  test_commands.py  test_coverage_gaps.py  test_device_flow.py  test_error_handling.py  test_features.py  test_foundation.py  test_integration.py  test_oidc.py  test_profile_management.py  test_run_command.py  test_schema_composition.py  test_security.py  test_spec_parsing.py  test_sse_streaming.py  test_v040_hardening.py
tests/fixtures/: petstore_spec.json
