[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openapi-cli4ai"
version = "0.4.0"
description = "Turn any REST API with an OpenAPI spec into an AI-ready CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "DBGorilla" },
]
keywords = ["openapi", "cli", "ai", "rest", "api", "llm", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer>=0.24,<1",
    "httpx>=0.28,<1",
    "rich>=13,<15",
    "pyyaml>=6,<7",
    "python-dotenv>=1.0,<2",
    "tomli-w>=1.0,<2",
]

[project.urls]
Homepage = "https://github.com/dbgorilla/openapi-cli4ai"
Repository = "https://github.com/dbgorilla/openapi-cli4ai"
Issues = "https://github.com/dbgorilla/openapi-cli4ai/issues"

[project.scripts]
openapi-cli4ai = "openapi_cli4ai.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/openapi_cli4ai"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: live API tests (may be slow)"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.coverage.run]
source = ["openapi_cli4ai"]

[tool.coverage.report]
show_missing = true
skip_empty = true
